--- a/style.css
+++ b/style.css
@@ -1,122 +1,116 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&family=Zen+Kurenaido&display=swap');
 
 :root {
-  --color-primary: rgb(204, 203, 219);
-  --color-secondary: rgb(34, 28, 36);
-  --color-img-bg: rgb(60, 45, 65);
+  --color-primary: rgb(255, 245, 245);
+  --color-secondary: salmon;
+  --color-img-bg: black;
+  font-size: 10px;
+  font-family: 'Poppins', sans-serif;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  background-color: var(--color-secondary);
-  color: var(--color-primary);
-  font-size: 18px;
-  font-family: 'Zen Kurenaido', sans-serif;
-
-  min-height: 100vh;
-  min-width: 470px;
-  margin: 0;
-
-  overflow-x: hidden;
-  overflow-y: scroll;
-
-  display: flex;
-}
-
-::-webkit-scrollbar {
-  display: none;
-}
-
-ul,
-li {
-  margin: 0;
-  padding: 0 0 0.5rem 0;
-}
-
-input,
-button {
-  background-color: var(--color-primary);
-  color: var(--color-secondary);
-  font-family: 'Zen Kurenaido', sans-serif;
-  outline: none;
+  background-color: #f5e3e0;
 }
 
 h1 {
-  margin: 0;
-  font-family: 'Satisfy', cursive;
+  font-size: 4rem;
+  color: white;
 }
 
-p {
-  margin: 0;
+.header {
+  max-width: 1400px;
+  height: 100px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+input {
+  border: 0;
+  height: 40px;
+  width: 300px;
+  padding: 8px;
+  border-radius: 4px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  font-size: 1.7rem;
+  font-family: 'Poppins';
+}
+
+input:focus {
+  border: 0;
+  outline: 0;
+  filter: brightness(0.9);
+}
+
+button:hover {
+  filter: brightness(0.9);
+}
+
+button {
+  height: 40px;
+  width: 80px;
+  border-radius: 4px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border: 0;
+  font-size: 1.7rem;
+  font-family: 'Poppins';
+  cursor: pointer;
+  background-color: #f5e3e0;
+}
+
+.header-container {
+  background-color: #f03a47;
+  margin-bottom: 3rem;
+}
+
+.credit {
+  position: absolute;
+  bottom: 0;
+  font-size: 2rem;
+  padding: 15px;
+}
+
+.results {
+  display: flex;
+  justify-content: center;
+}
+
+.shows {
+  display: flex;
+  gap: 12px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.shows li {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
 }
 
 img {
-  max-width: 100%;
+  border-radius: 4px;
+  width: 200px;
 }
 
-#app {
-  margin: 0 auto;
-  padding: 0.5rem 1rem 1rem 1rem;
-  max-width: 800px;
-
-  flex: 1;
-
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
+img:hover {
+  filter: brightness(0.5);
+  cursor: pointer;
 }
 
-#app > * {
+form {
   display: flex;
 }
 
-#bar {
-  flex-wrap: wrap;
-  align-items: baseline;
-
-  margin-top: 1rem;
-}
-
-#bar > h1 {
-  padding: 0.2rem 1rem;
-}
-
-#search-form {
-  flex: 1;
-
-  display: flex;
-}
-
-#search-form input,
-#search-form button {
-  padding: 0.1rem 0.5rem;
-  border: 0;
+.message{
   font-size: 2rem;
-}
-
-#query {
-  flex: 1;
-}
-
-#results {
-  flex: 1;
-  align-items: flex-start;
-}
-
-#shows {
-  margin: 1rem 0;
-
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-#shows li {
-  flex-basis: 126px;
-  display: flex;
-  flex-direction: column;
-}
-
-.poster {
-  background-color: var(--color-img-bg);
-  height: 177px;
 }
